﻿v8.7
-----
: Fixed a bug where activity page highlighting displayed incorrectly


v8.6
-----
+ Added an item counter to both party's item selection in trade offer windows
+ Added a filter box to wishlist pages, making it easy to find games by name
+ Wishlist sort and filter options are now in a drop down menu, rather than links
+ Added a new wishlist sort option to sort by discount dollar amount
+ Video player HD settings will now be saved between page loads
: Wishlist totals for large wishlists will display after pressing a button, improving performance
: Fixed a bug that caused highlighting to break on activity pages
: Fixed a bug that caused coupons not to display correctly on store pages
: Fixed a bug that caused "Not Interested" tags to not show on continuous scrolling search results
: Fixed a bug that caused users homepage carousel to be malformed in some cases
: Fixed a layout bug with regional price comparison on sale items
: Gamefly has been renamed to Direct2Drive in price comparisons
- References to the EU2 region have been removed from regional price displays
- Closed stores Shinyloot, Adventure Shop, GameTap, GetGames, and Gameolith were removed from comparisons

v8.5
-----
+ Added dynamic store data to wishlist pages
+ Added a button to profile backgrounds in your inventory to set them as your background with a single click
+ Added release date information for unreleased games on wishlist pages
+ Added a media slider to store and workshop pages to expand the screenshots and movies section
+ Added an "Add to your wishlist" button on other people's wishlist pages
+ Added an option to skip the "Got Steam" dialog on store pages
+ Added a link to the web chat to the Community dropdown menu when logged in
+ Added highlighting and tagging options for items marked as "Not Interested"
+ Added a button to toggle HD playback of videos on app pages
+ Added a button to profile background market pages to preview that background on your own profile